--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,7 @@ title: Kontakt
 description: "Kontakt."
 comments: false
 ---
-<h2>Bokserski Klub Sportowy Smok Zabierzów im. Andrzeja Firsta</h2>
+<h2>Bokserski Klub Sportowy Smok Zabierzów<BR/>im. Andrzeja Firsta</h2>
 <b>Siedziba klubu:</b> Zabierzów 32-080, ul. Słoneczna 3<br/>
 <b>NR KRS:</b> 0000680094 <br/>
 <b>NIP:</b> 5130250318<br/>
