Zmiana adresu email

--- a/kontakt.html
+++ b/kontakt.html
@@ -9,5 +9,5 @@ comments: false
 <b>NR KRS:</b> 0000680094 <br/>
 <b>NIP:</b> 5130250318<br/>
 <b>Konto:</b> PKO Bank Polski S.A. <b>31 1020 2892 0000 5102 0644 1036</b><br/>
-<b>Mail:</b> smok.krakow@interia.pl<br/>
+<b>Mail:</b> biuro@boks-zabierzow.pl<br/>
 <b>Tel.:</b> 504 156 080<br/>
