kadra trenerska, zaproszenie na treningi

--- a/treningi-zapisy.html
+++ b/treningi-zapisy.html
@@ -1,14 +1,10 @@
----
-layout: dark-post
-title: Treningi
-description: "Treningi i zapisy."
-comments: false
----
+--- layout: dark-post title: Treningi description: "Treningi i zapisy."
+comments: false ---
 
 <h2>HARMONOGRAM TRENINGÓW</h2>
-<b>Sala
-	boksu I piętro (nr 216), główny budynek TS Wisła<br>Kraków, ul.
-	Reymonta 22</b>
+<b>Sala boksu I piętro (nr 216), główny budynek TS Wisła<br>Kraków,
+	ul. Reymonta 22
+</b>
 <br>
 <br>
 <b>Grupa początkująca:</b>
@@ -95,43 +91,38 @@ Zapisy na treningi trwają cały czas. Zapraszamy.
 	<h2>GRUPA POCZĄTKUJĄCA</h2>
 	<div>Treningi grupy początkującej charakteryzują się dużą ilością
 		ćwiczeń ogólnorozwojowych pozwalających przygotować organizm do
-		wykonywania skomplikowanych technik bokserskich oraz kopnięć, które
-		wymagają odpowiedniej precyzji, szybkości i siły. Podczas ćwiczeń
-		zwracamy szczególną uwagę na kształtowaniu prawidłowych technik
-		bokserskich i kopnięć, których trudność stopniowo jest podwyższana.
-		Ćwiczenia są wykonywane w powietrze, z partnerem oraz na
-		specjalistycznym sprzęcie sportowym tj. worki bokserskie, gruszki,
-		tarcze itp. Na grupę początkującą mogą uczęszczać zarówno osoby, które
-		nie miały dotychczas żadnej styczności z jakimkolwiek sportem, jak
-		również osoby wytrenowane, które chcą doskonalić swoje umiejętności
-		oraz zwiększyć sprawność fizyczną.</div>
+		wykonywania skomplikowanych technik bokserskich, które wymagają
+		odpowiedniej precyzji, szybkości i siły. Podczas ćwiczeń zwracamy
+		szczególną uwagę na kształtowaniu prawidłowych technik bokserskich,
+		których trudność stopniowo jest podwyższana. Ćwiczenia są wykonywane w
+		powietrze, z partnerem oraz na specjalistycznym sprzęcie sportowym tj.
+		worki bokserskie, gruszki, tarcze itp. Na grupę początkującą mogą
+		uczęszczać zarówno osoby, które nie miały dotychczas żadnej styczności
+		z jakimkolwiek sportem, jak również osoby wytrenowane, które chcą
+		doskonalić swoje umiejętności oraz zwiększyć sprawność fizyczną.</div>
 	<br>
 	<h2>GRUPA ZAAWANSOWANA</h2>
 	<div>Treningi na grupie zaawansowanej charakteryzują się
 		zwiększonym stopniem trudności wykonywanych technik, dużą ilością i
 		intensywnością ćwiczeń. Podczas ćwiczeń zwracamy szczególną uwagę na
-		kształtowaniu prawidłowych technik bokserskich i kopnięć w walce
-		sportowej. Ćwiczenia wykonywane są w formie tarczy z partnerem i
-		trenerem, sparingów (walka sportowa) oraz na specjalistycznym sprzęcie
-		sportowym tj. worki bokserskie, gruszki, tarcze itp. Na grupę
-		zaawansowaną mogą uczęszczać osoby wytypowane przez trenerów, które
-		nabyły odpowiednie wyszkolenie techniczne i sprawność fizyczną,
-		pozwalającą na wykonywanie ćwiczeń na odpowiednio wysokim poziomie
-		zaawansowania.</div>
+		kształtowaniu prawidłowych technik bokserskich w walce sportowej.
+		Ćwiczenia wykonywane są w formie tarczy z partnerem i trenerem,
+		sparingów (walka sportowa) oraz na specjalistycznym sprzęcie sportowym
+		tj. worki bokserskie, gruszki, tarcze itp. Na grupę zaawansowaną mogą
+		uczęszczać osoby wytypowane przez trenerów, które nabyły odpowiednie
+		wyszkolenie techniczne i sprawność fizyczną, pozwalającą na
+		wykonywanie ćwiczeń na odpowiednio wysokim poziomie zaawansowania.</div>
 	<br>
-	<h2>TRENING INDYWIDUALNY BOKS, KICKBOXING</h2>
+	<h2>TRENING INDYWIDUALNY BOKS</h2>
 	<div>Personalny trening to obecnie jedna z najpopularniejszych i
 		efektywnych form treningu. Indywidualny trening pozwala w szybki
-		sposób nabyć umiejętności technik boksu i kickboxingu wykorzystywanych
-		w walce sportowej. Treningi charakteryzują się indywidualnym
-		dopasowaniem zestawu ćwiczeń i ich intensywności do założonych celów i
-		umiejętności osoby trenującej. Większość ćwiczeń wykonywanych jest z
-		instruktorem np. techniki z użyciem tarczy, trening walki sportowej
-		itp. Dodatkowo ćwiczenia prowadzone są z zastosowaniem
-		specjalistycznego sprzętu tj. worek bokserski, gruszki, tarcze
-		treningowe do zadawania ciosów ręcznych i kopnięć.</div>
-	<div>
-
-
-	</div>
+		sposób nabyć umiejętności technik boksu wykorzystywanych w walce
+		sportowej. Treningi charakteryzują się indywidualnym dopasowaniem
+		zestawu ćwiczeń i ich intensywności do założonych celów i umiejętności
+		osoby trenującej. Większość ćwiczeń wykonywanych jest z trenerem np.
+		techniki z użyciem tarczy, trening walki sportowej itp. Dodatkowo
+		ćwiczenia prowadzone są z zastosowaniem specjalistycznego sprzętu tj.
+		worek bokserski, gruszki, tarcze treningowe do zadawania ciosów
+		ręcznych i kopnięć.</div>
+	<div></div>
 </div>
