poprawka zakładki zapisy

--- a/treningi-zapisy.html
+++ b/treningi-zapisy.html
@@ -1,5 +1,9 @@
---- layout: dark-post title: Treningi description: "Treningi i zapisy."
-comments: false ---
+--- 
+layout: dark-post 
+title: Treningi 
+description: "Treningi i zapisy."
+comments: false 
+---
 
 <h2>HARMONOGRAM TRENINGÓW</h2>
 <b>Sala boksu I piętro (nr 216), główny budynek TS Wisła<br>Kraków,
