Dodanie logo i sponsorów, ujednolicenie layoutu

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
 title: "Smok Zabierzów"
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+description: "Boks Zabierzów, Bokserski klub sportowy."
+tags: [Boks, Zabierzów, Kick Boxing, Kraków]
 comments: false
 ---
 
