--- a/sponsorzy.html
+++ b/sponsorzy.html
@@ -7,3 +7,7 @@ comments: false
 <h2>Sponsorzy</h2>
 <a href="http://metmix.com.pl" target="_blank"><img
 	src="{{site.url}}/images/metmix.png" alt="Metmix" /></a>
+	
+	
+<a href="http://rmsport.pl/" target="_blank"><img
+	src="{{site.url}}/images/logo-rms.png" alt="RMS" /></a>
